--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,7 +2,7 @@ version: '3.8'
 
 services:
   backend-api:
-    build: ./backend_api
+    build: ./backend
     ports:
       - "8001:8000"
     depends_on:
