--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -7,4 +7,5 @@ RUN pip install -r requirements.txt
 
 COPY . .
 
-CMD ["python", "manage.py", "runserver", "0.0.0.0:8000"]
+RUN chmod +x ./entry.sh
+ENTRYPOINT ["./entry.sh"]
