api-communication-rabbitmq

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -40,3 +40,5 @@ services:
     ports:
       - "5672:5672"  # RabbitMQ main port
       - "15672:15672"  # RabbitMQ Management UI
+    networks:
+      - default
