--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,10 +2,12 @@ FROM python:3.9-slim
 
 WORKDIR /app
 
+# Copy and install dependencies
 COPY requirements.txt .
 RUN pip install -r requirements.txt
 
+# Copy the rest of the application code
 COPY . .
 
-RUN chmod +x ./entry.sh
-ENTRYPOINT ["./entry.sh"]
+# Run Django migrations and start the server
+CMD ["bash", "-c", "python manage.py makemigrations && python manage.py migrate && python manage.py runserver 0.0.0.0:8000"]
